<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_get_password"
        android:title="@string/get_password"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_generate"
        android:title="@string/generate"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_import"
        android:title="@string/import_entries"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_export"
        android:title="@string/export_entries"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_lock"
        android:title="@string/lock"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_share"
        android:title="Share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    
</menu>